--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zapocet2023</title>
+    <meta name="description" content="I'm Petr Doseděl, a Full-Stack Developer specializing in web development, REST API design, and modern web applications. I create fast, responsive, and functional websites tailored to your business needs.">
+    <meta name="keywords" content="Petr Doseděl, Full-Stack Developer, web developer, software development, REST API, web applications, web design, SEO optimization, Olomouc, freelancer">
+    <meta name="author" content="Petr Doseděl">
+
+    <title>web developer computer science software development</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Favicona pro všechny prohlížeče -->
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <!-- Apple touch icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+
+    <!-- Open Graph pro Facebook / LinkedIn -->
+    <meta property="og:title" content="Petr Doseděl | Full-Stack Developer">
+    <meta property="og:description" content="Tvořím moderní webové aplikace, REST API a weby na míru.">
+    <meta property="og:image" content="favicon.png">
+    <meta property="og:url" content="https://peta47.github.io/ProfileBlog/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Petr Doseděl | Full-Stack Developer">
+    <meta name="twitter:description" content="Moderní weby a aplikace, REST API, SEO a vývoj na míru.">
+    <meta name="twitter:image" content="favicon.png">
+
 </head>
 <body>
     <header class="flex__header flex page-width">
