--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Petr Doseděl, Full-Stack Developer, web developer, software development, REST API, web applications, web design, SEO optimization, Olomouc, freelancer">
     <meta name="author" content="Petr Doseděl">
 
-    <title>web developer computer science software development</title>
+    <title>PetrDosedel.cz</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicona pro všechny prohlížeče -->
@@ -31,6 +31,8 @@
 
 </head>
 <body>
+    <button id="scrollTopBtn">⬆️</button>
+    <button id="theme-toggle">🌓</button>
     <header class="flex__header flex page-width">
         <div class="flex__header__item">
             <div class="flex__header__item__column flex">
@@ -325,4 +327,57 @@
         alert("⚠️ Chyba připojení. Zkus to znovu.");
     }
     });
+
+    // Smooth scroll pro odkazy v navigaci
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+        target.scrollIntoView({ behavior: 'smooth' });
+        }
+    });
+    });
+
+    /*smooth prechody*/
+    const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+        if (entry.isIntersecting) {
+        entry.target.classList.add("show");
+        }
+    });
+    });
+
+    document.querySelectorAll("section").forEach(sec => {
+    observer.observe(sec);
+    });
+
+    /*skrolovaci tlacitko nahoru*/
+    const scrollBtn = document.getElementById("scrollTopBtn");
+
+    window.addEventListener("scroll", () => {
+    scrollBtn.style.display = window.scrollY > 300 ? "block" : "none";
+    });
+
+    scrollBtn.addEventListener("click", () => {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+
+    /*dark/light mode*/
+    const toggle = document.getElementById("theme-toggle");
+    const root = document.documentElement;
+
+    if (localStorage.getItem("theme") === "light") {
+    root.classList.add("light-mode");
+    }
+
+    toggle.addEventListener("click", () => {
+    root.classList.toggle("light-mode");
+    localStorage.setItem(
+        "theme",
+        root.classList.contains("light-mode") ? "light" : "dark"
+    );
+    });
+
+
 </script>
